--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.8",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "@zoomus/websdk": "^2.18.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
