--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^12.23.5",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
+    "next-intl": "^4.4.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
