--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^9.1.0",
+    "react-phone-number-input": "^3.4.8",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.6",
